--- a/week03/wdd130/wwr/about.html
+++ b/week03/wdd130/wwr/about.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="WWR — White water rafting tours: safe guided rapids, family adventures, and training.">
     <meta name="author" content="Vincent Lawrence Titifanua">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="wwr/styles" href="styles/rafting.css">
 </head>
 
 <body>
@@ -64,7 +64,7 @@
         <nav class="socialmedia">
             <a href="#" aria-label="Facebook"><img src="images/Facebook_Logo_2023.png" alt="Facebook icon"></a>
             <a href="#" aria-label="Instagram"><img src="images/images.jpg" alt="Instagram icon"></a>
-            <a href="#" aria-label="YouTube"><img src="images/LinkedIn_logo_initials.png" alt="YouTube icon"></a>
+            <a href="#" aria-label="YouTube"><img src="images/LinkedIn_logo_initials.png" alt="linkedin icon"></a>
         </nav>
     </footer>
 </body>
