--- a/week03/wdd130/wwr/about.html
+++ b/week03/wdd130/wwr/about.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="WWR — White water rafting tours: safe guided rapids, family adventures, and training.">
     <meta name="author" content="Vincent Lawrence Titifanua">
-    <link rel="wwr/styles" href="styles/rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
